# miser

./: .gitignore  LICENSE  README.md  miser.cabal  stack.yaml  test.thrift
examples/: test.thrift
src/: Main.hs
src/Text/Miser/Thrift/: Lexer.hs  Parser.hs
