name:                miser
version:             0.1.0.0
synopsis:            A parser for Thrift IDL files
description:         Please see README.md
homepage:            http://github.com/jpgneves/miser#readme
license:             BSD3
license-file:        LICENSE
author:              Joao Neves
maintainer:          sevenjp@gmail.com
copyright:           2016 Joao Neves
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable miser
  hs-source-dirs:      src
  other-modules:       Text.Miser.Thrift.Lexer
                     , Text.Miser.Thrift.Parser
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec